<resources>
    <string name="app_name">Решебник</string>
    <string name="app_version">1.0</string>
    <string name="app_repo_url">https://github.com/hexumee/ResolverApp</string>
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="library">Библиотека</string>
    <string name="greeting_morning">Доброе утро!</string>
    <string name="greeting_noon">Добрый день!</string>
    <string name="greeting_evening">Добрый вечер!</string>
    <string name="greeting_night">Доброй ночи!</string>
    <string name="settings_activity_name">Настройки</string>
    <string name="downloads_activity_name">Загруженные книги</string>
    <string name="recently_viewed_activity_name">Недавно просмотренные</string>
    <string name="saved_books_activity_name">Сохранённые книги</string>
    <string name="saved_tasks_activity_name">Сохранённые задачи</string>
    <string name="home_settings_description">Настройки</string>
    <string name="home_recently_viewed_title">Недавно просмотренные</string>
    <string name="search_type_switch_description">Выбрать тип поиска</string>
    <string name="library_downloaded_description">Загруженные</string>
    <string name="library_saved_books_title">Сохранённые книги</string>
    <string name="library_saved_tasks_title">Сохранённые задачи</string>
    <string name="search_choose_class">Выберите класс</string>
    <string name="search_choose_subject">Выберите предмет</string>
    <string name="view_all_description">Посмотреть все</string>
    <string name="book_image_description">Обложка</string>
    <string name="book_root_topic">Содержание</string>
    <string name="book_favorites_switch_text">Сохранить в закладках</string>
    <string name="book_download_switch_text">Загрузить (офлайн-доступ)</string>
    <string name="tasks_view_switch_title">Сменить вид</string>
    <string name="tasks_search_title">Поиск</string>
    <string name="task_go_prev_text">Предыдущее решение</string>
    <string name="task_go_next_text">Следующее решение</string>
    <string name="task_image_description">Изображение</string>
    <string name="search_bar_hint">Введите запрос (автор, название…)</string>
    <string name="tasks_bar_hint">Что ищем?</string>
    <string name="settings_theme_header">Тема</string>
    <string name="settings_theme_system">Как в системе</string>
    <string name="settings_theme_light">Светлая</string>
    <string name="settings_theme_dark">Тёмная</string>
    <string name="settings_tasks_view_header">Вид списка задач</string>
    <string name="settings_tasks_view_auto">Автоматически</string>
    <string name="settings_tasks_view_grid">Таблица</string>
    <string name="settings_tasks_view_list">Список</string>
    <string name="settings_wipe_data_header">Очистка данных</string>
    <string name="settings_wipe_data_recently_viewed">Очистить «Недавно просмотренные»</string>
    <string name="settings_wipe_data_saved_books">Очистить «Сохранённые книги»</string>
    <string name="settings_wipe_data_saved_tasks">Очистить «Сохранённые задачи»</string>
    <string name="settings_wipe_data_downloaded_books">Очистить «Загруженные книги»</string>
    <string name="settings_wipe_data_all">Очистить всё</string>
    <string name="settings_about_app_header">О приложении</string>
    <string name="service_delete_name">Удаление книг</string>
    <string name="service_delete_notification_title">Удаление книги</string>
    <string name="service_download_name">Загрузка книг</string>
    <string name="service_download_preparing_notification_title">Подготовка</string>
    <string name="service_download_progress_template">Выполнено: %d из %d</string>
    <string name="main_activity_no_internet_toast_text">Нет подключения к Интернету. Доступны только книги, которые были загружены для офлайн-доступа.</string>
    <string name="empty_list_placeholder">Здесь пока пусто</string>
    <string name="dialog_about_github">Ссылка на GitHub</string>
    <string name="search_nothing_found">Ничего не найдено</string>
    <string name="book_delete_action_toast">Удаление выполнится в фоне. Дальнейших действий не требуется.</string>
    <string name="book_download_action_toast">Загрузка началась. Это может занять некоторое время.</string>
    <string name="settings_confirmation_title">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="settings_success">Успешно.</string>
    <string name="settings_wipe_recently_viewed_message">Будут удалены все просмотренные книги с главной страницы.</string>
    <string name="settings_wipe_saved_books_message">Будут удалены все сохранённые книги из библиотеки.</string>
    <string name="settings_wipe_saved_tasks_message">Будут удалены все сохранённые задачи из библиотеки.</string>
    <string name="settings_wipe_downloaded_books_message">Будут удалены все загруженные книги из библиотеки.</string>
    <string name="settings_wipe_all_message">Будут удалены все элементы из главной страницы и библиотеки.</string>
    <string name="search_classes_list_template">%s класс</string>
</resources>
