<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/task_prev"
        app:showAsAction="always"
        android:icon="@drawable/ic_arrow_left_32"
        android:title="@string/task_go_prev_text"
        app:iconTint="?attr/menu_tint_color" />

    <item
        android:id="@+id/task_next"
        app:showAsAction="always"
        android:icon="@drawable/ic_arrow_right_32"
        android:title="@string/task_go_next_text"
        app:iconTint="?attr/menu_tint_color" />

    <item
        android:id="@+id/task_favorites_switch"
        app:showAsAction="always"
        android:icon="@drawable/ic_book_favorites_switch_save_24"
        android:title="@string/book_favorites_switch_text"
        app:iconTint="?attr/menu_tint_color" />

</menu>
