<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fragment_background"
    tools:context=".SettingsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/themes_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/themes_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/text_color"
                android:text="@string/settings_theme_header" />

            <TextView
                android:id="@+id/themes_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themes_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="?attr/text_alt_color"
                android:text="@string/settings_theme_system" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/themes_section"
        android:background="?attr/divider_color" />


    <androidx.cardview.widget.CardView
        android:id="@+id/tasks_view_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/themes_section"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tasks_view_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/text_color"
                android:text="@string/settings_tasks_view_header" />

            <TextView
                android:id="@+id/tasks_view_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tasks_view_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="?attr/text_alt_color"
                android:text="@string/settings_tasks_view_auto" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tasks_view_section"
        android:background="?attr/divider_color" />


    <androidx.cardview.widget.CardView
        android:id="@+id/wiping_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasks_view_section"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/text_color"
                android:text="@string/settings_wipe_data_header" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/wiping_section"
        android:background="?attr/divider_color" />


    <androidx.cardview.widget.CardView
        android:id="@+id/about_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wiping_section"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/text_color"
                android:text="@string/settings_about_app_header" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
