<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fragment_background"
    tools:context=".ui.fragments.search.SearchFragment">

    <RelativeLayout
        android:id="@+id/search_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?attr/text_color"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/search_type_switch"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/search_type_switch_description"
            android:src="@drawable/ic_search_query_24"
            app:tint="?attr/tint_color" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_header">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/search_bar_hint"
            android:textSize="18sp"
            android:textColor="?attr/text_color"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_below="@id/search_header"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/search_selectors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@id/search_header"
            android:visibility="visible">

            <androidx.cardview.widget.CardView
                android:id="@+id/classes_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="?attr/card_color">

                <Spinner
                    android:id="@+id/classes_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:spinnerMode="dropdown" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="5dp"
                android:layout_below="@id/classes_card"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="?attr/card_color">

                <Spinner
                    android:id="@+id/subjects_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:spinnerMode="dropdown" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/search_view">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:paddingBottom="65dp"
            android:fastScrollEnabled="true"
            android:fastScrollAlwaysVisible="true"
            android:clipToPadding="false" />

        <RelativeLayout
            android:id="@+id/nothing_found_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/nothing_found_holder_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_nothing_found_24"
                android:tint="?attr/tint_alt_color"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nothing_found_holder_icon"
                android:text="@string/search_nothing_found"
                android:textColor="?attr/text_alt_color"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/search_wip_indicator"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:progressTint="?attr/accent_color" tools:targetApi="l"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>
